# E-shop

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_additional_py.html  z_145eef247bfb46b6_classes_py.html  z_145eef247bfb46b6_file_reader_py.html  z_145eef247bfb46b6_subclasses_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_classes_additional_py.html  z_a44f0ac069e85531_test_classes_py.html  z_a44f0ac069e85531_test_file_reader_py.html  z_a44f0ac069e85531_test_subclasses_py.html
src/: classes.py  classes_additional.py  classes_exception.py  file_reader.py  subclasses.py
tests/: conftest.py  test_classes.py  test_classes_additional.py  test_file_reader.py  test_subclasses.py
